--- a/tindex.html
+++ b/tindex.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
     <link rel="stylesheet" href="tindex.css">
 
     <title>ticker collector! </title>
@@ -14,5 +15,11 @@
 <button id="increment-btn" onclick="increment()">INCREMENT</button>
 <script src="tindex.js"></script>
     
+
+<div class="image-citation">
+    Photo by Marco Bottigelli / Getty Images
+</div> 
+
+
 </body>
 </html> 
