--- a/tindex.html
+++ b/tindex.html
@@ -10,15 +10,25 @@
 </head>
 <body>
 
-<h1> People entered:</h1>
+<h1> New York City Train Counter</h1>
+
 <h2 id="count-el">0</h2>
+
+
 <button id="increment-btn" onclick="increment()">INCREMENT</button>
+<!-- the onclick will activate for that function -->
+<button id="save-btn" onclick="save()"> SAVE </button>
+<p id="save-el">Previous entires: </p>
 <script src="tindex.js"></script>
     
 
 <div class="image-citation">
-    Photo by Marco Bottigelli / Getty Images
+<p> 
+    Vlad Alexandru Popa photo</p>
 </div> 
+
+
+
 
 
 </body>
